Closed Bug 1633097 Opened 4 years ago Closed 1 year ago

mingw's version of shlwapi.h is missing IsOS/OS_DOMAINMEMBER

Categories

(Firefox Build System :: General: Unsupported Platforms, defect)

Unspecified
Windows
defect

Tracking

(firefox112 fixed)

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: MattN, Assigned: tjr)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

In bug 1631879 we needed IsOS and OS_DOMAINMEMBER from shlwapi.h but it's missing in mingw-w64: https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-headers/include/shlwapi.h

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is -- (non,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)

Severity: normal → --
Assignee: nobody → tom
Status: NEW → ASSIGNED
Pushed by tritter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/54e3d4189520
Revert IsOS MinGW hack-around r=firefox-build-system-reviewers,ahochheiden
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: