Bug 1633097: Revert IsOS MinGW hack-around r=firefox-build-system-reviewers,ahochheiden

Differential Revision: https://phabricator.services.mozilla.com/D169372